# snaptrade-mcp-server

./: .gitignore  CLAUDE.md  README.md  diagrams.html  pyproject.toml
.github/workflows/: ci.yml
blog/: article-mcp-portfolio.md  substack-writing-assistant-prompt.md
snaptrade-mcp/: README.md  __init__.py  __main__.py  server.py
snaptrade_mcp/: README.md  oauth_provider.py  server.py  snaptrade_client.py  snaptrade_client.pyi
tests/integration/: test_api.py
tests/unit/: test_cli.py  test_oauth_provider.py  test_server.py
