[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "snaptrade-mcp"
version = "0.1.0"
description = "Read-only MCP server for brokerage data via SnapTrade"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Micah Peterson", email = "micah63@gmail.com" },
]
keywords = ["mcp", "snaptrade", "brokerage", "finance", "ai-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "snaptrade-python-sdk>=11.0.0",
]

[project.optional-dependencies]
# Install dev extras with: pip install -e ".[dev]"
# This is used both locally and in CI (see .github/workflows/ci.yml).
dev = ["ruff", "pyright", "pytest", "pytest-dotenv", "pytest-cov"]

[project.scripts]
snaptrade-mcp = "snaptrade_mcp.server:main"

[tool.pytest.ini_options]
# --envfile loads tests/integration/.env automatically via pytest-dotenv.
# pytest-dotenv uses dotenv_path (a real file path), not find_dotenv (which
# searches up the directory tree by filename only — it would not find a file
# at a subdirectory path like tests/integration/.env).
#
# The .env file is gitignored. To run integration tests:
#   - Locally: fill in tests/integration/.env from ~/.snaptrade/config.json
#   - CI: set GitHub Actions Secrets — the fixture bootstraps config.json from them
addopts = "--envfile=tests/integration/.env"

[project.urls]
Homepage = "https://github.com/l3a0/snaptrade-mcp-server"
Repository = "https://github.com/l3a0/snaptrade-mcp-server"
Issues = "https://github.com/l3a0/snaptrade-mcp-server/issues"
